--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+  background: #eee;
 }
 
 .container {
@@ -18,6 +19,7 @@ body {
   border: 1px solid steelblue;
   padding: 30px;
   border-radius: 5px;
+  background: #fff;
 }
 
 .header {
